# ndktest

ndk/app/: CMakeLists.txt  build.gradle
ndk/app/src/androidTest/java/com/sanhen/www/ndkdemo/: ExampleInstrumentedTest.java
ndk/app/src/main/: AndroidManifest.xml
ndk/app/src/main/cpp/: native-lib.cpp
ndk/app/src/main/java/com/sanhen/www/ndkdemo/: MainActivity.java
ndk/app/src/test/java/com/sanhen/www/ndkdemo/: ExampleUnitTest.java
ndkdemo2/app/: CMakeLists.txt  build.gradle
ndkdemo2/app/src/androidTest/java/com/sanhen/www/ndkdemo2/: ExampleInstrumentedTest.java
ndkdemo2/app/src/main/: AndroidManifest.xml
ndkdemo2/app/src/main/cpp/: native-lib.cpp  native-lib.h
ndkdemo2/app/src/main/java/com/sanhen/www/ndkdemo2/: MainActivity.java
ndkdemo2/app/src/main/jni/: native-lib.c
ndkdemo2/app/src/main/res/values/: strings.xml
ndkdemo2/app/src/test/java/com/sanhen/www/ndkdemo2/: ExampleUnitTest.java
